--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,6 +1,6 @@
 /* This file is for your main application css. */
 
 #file {
-  height: 100%;
-  min-height: 500px;
+  width: 60%;
+  position: fixed;
 }
