--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<div class="row marketing">
+<div class="row">
   <div class="col-sm-4">
     <ul id="tree" class="nav nav-pills nav-stacked">
     </ul>
