--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -7,13 +7,16 @@ $side-bar-color: #BFF4FF;
 $link-color-hover: #003744;
 $link-color: #003744;
 
-// @import url("../node_modules/font-awesome/css/font-awesome.css");
+* {
+  box-sizing: border-box;
+}
 
 .line {
   display: inline-block;
   width: 2em;
   user-select: none;
   opacity: 0.3;
+  padding: 0 10px;
 }
 
 .main {
@@ -46,6 +49,7 @@ $link-color: #003744;
   height: 100%;
   width: 20%;
   overflow-y: scroll;
+  font-family: 'Helvetica';
   .search-box {
     padding: 5px;
     position: fixed;
@@ -65,7 +69,7 @@ $link-color: #003744;
       padding-right: 25px;
     }
   }
-  
+
   ul {
     list-style: none;
     margin: 0;
@@ -77,6 +81,7 @@ $link-color: #003744;
       padding: 10px;
       color: $link-color;
       text-align: none;
+      text-decoration: none;
       transition: all 0.1s ease-in;
       &:hover {
         background-color: $link-color-hover;
