--- a/lib/file_presenter_web/templates/layout/app.html.eex
+++ b/lib/file_presenter_web/templates/layout/app.html.eex
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="File Presenter for workshops">
-
-    <title>FilePresenter</title>
+    <title>File presenter</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
